Add  check of the BUILD.rst for any changes to help in keeping the SDK build script up-to-date.